--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "http": "^0.0.1-security",
+    "mongoose": "^9.0.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
