--- a/backend/package.json
+++ b/backend/package.json
@@ -13,13 +13,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "gridfs-stream": "^1.1.1",
+    "groq-sdk": "^0.37.0",
     "http": "^0.0.1-security",
+    "mammoth": "^1.11.0",
     "mongoose": "^9.0.0",
     "multer": "^1.4.5-lts.1",
+    "pdf-parse": "^2.4.5",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
