--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "gridfs-stream": "^1.1.1",
     "groq-sdk": "^0.37.0",
     "http": "^0.0.1-security",
+    "ioredis": "^5.8.2",
     "mammoth": "^1.11.0",
     "mongoose": "^9.0.0",
     "multer": "^1.4.5-lts.1",
