--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -17,4 +17,4 @@ RUN npm install
 RUN npm run build
 
 # Run the command to start the application
-CMD ["npm", "run", "start"]
+CMD ["npm", "run", "dev"]
